--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -123,7 +123,7 @@ li:hover {
 }
 #portfolio h2 {
 	text-align: center;
-	margin-bottom: 1em;
+	margin-bottom: 51px;
 }
 .gallery {
 	width: 100%;
@@ -186,3 +186,72 @@ footer nav ul {
 	margin: 2em
 }
 
+/* filtres */
+
+#portfolio {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+.filters {
+	height: 37px;
+	width: 585px;
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 51px;
+}
+
+button {
+  background-color: white;
+  border: 1px solid #1D6154;
+  border-radius: 60px;
+  color: #1D6154;
+  padding-top: 8px;
+  padding-bottom: 8px;
+  text-align: center;
+  display: inline-block;
+  font-size: 16px;
+  line-height: 19px;
+  font-weight: 700;
+  font-family: 'Syne';
+}
+
+#Tous {
+	padding-right: 29px;
+	padding-left: 27px;
+}
+
+#Objets {
+	padding-right: 21px;
+	padding-left: 19px;
+}
+
+#Appart {
+	padding-right: 14px;
+	padding-left: 13px;
+}
+
+#Hotels {
+	padding-right: 10px;
+	padding-left: 8px;
+}
+
+.gallery figure {
+	height: 407px;
+	width: 304px;
+}
+
+#Tous:focus, #Objets:focus, #Appart:focus, #Hotels:focus
+{
+	background-color: #1D6154;
+	color: white;
+}
+
+.gallery {
+	margin-left: ;
+}
+a {
+	text-decoration:none;
+	color: black;
+}
