--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -177,7 +177,7 @@ input[type="submit"]{
 	color: white;
 	background-color: #1D6154;
 	margin : 2em auto ;
-	width: 180px;
+	width: 280px;
 	text-align: center;
 	border-radius: 60px ;
 }
@@ -250,6 +250,7 @@ button {
 	color: white;
 }
 
+/* lien modifier */
 a {
 	color: black;
 	text-align: center;
@@ -283,7 +284,6 @@ a {
   font-weight: normal;
   font-family: 'Work Sans' ;
 }
-
 
 #introduction figure {
   display: flex;
@@ -322,7 +322,7 @@ body .edition {
 	padding: 10px;
 }
 
-
+/* modal fond */
 .modal {
 	position: fixed;
 	display: flex;
@@ -335,6 +335,7 @@ body .edition {
 	background: rgba(0, 0, 0, 0.3);
 }
 
+/* modale wrapper */
 .modal-wrapper{
 	overflow: auto;
 	background-color: white;
@@ -344,15 +345,15 @@ body .edition {
 	border-radius: 10px;
 	display: flex;
 	flex-direction: column;
-	justify-content: center;
 	align-items: center;
 	gap: 30px;
 }
 
-.modal-wrapper span{
+/* postionnement de la X pour fermer */
+.xmark{
 	margin-left: auto;
 }
-
+/* postionnement de la X pour fermer */
 .fa-xmark{
 	font-size: 20px;
 }
@@ -368,12 +369,17 @@ h3{
 	margin-bottom: 20px;
 }
 
-#deleteGalerie{
+#deleteGalerie {
 	display: flex;
 	flex-direction: row;
 	justify-content: center;
+	color: #da0808;
+	font-family: 'Syne';
+	font-size: 14px;
+	font-weight: 400;
 }
 
+/* affichage images des projets */
 .afficherProjetsModal{
 	display: flex;
 	flex-wrap: wrap;
@@ -383,25 +389,26 @@ h3{
 	gap: 0px;
 }
 
+/* affichage icone poubelle */
  .fa-trash-can{
 	position: absolute;
 	top: 5px;
 	left: 55px;
-
 }
-
+/* affichage icone selection du projet */
 .fa-arrows-up-down-left-right{
 	position: absolute;
 	top: 5px;
-	left: 35px 
+	left: 35px;
 }
 
 .afficherProjetsModal figure {
   display: flex;
   flex-direction: column;
-  position: relative;
+  position: relative; /* pour pouvoir placer les icones poubelle et selection en absolute dans les figure */
 }
 
+/* affichage imag des projets*/
 .afficherProjetsModal figure img {
   width: 100%;
   object-fit: cover;
@@ -413,6 +420,7 @@ h3{
   margin-top: 5px;
 }
 
+/* affichage icone poubelle et selection dans leur contenant i*/
 .afficherProjetsModal figure i {
   font-size: 10px;
   color: white;
@@ -423,11 +431,120 @@ h3{
   justify-content: center;
   align-items: center;
   border-radius: 5px;
-
 }
 
-hr {
-	color: #1D6154;
+/* affichage de la barre de séparation */
+.js-modal-wrapper hr {
+	border-top: 1px solid #B3B3B3;
     width: 430px;
-	height: 0px;
+	position: absolute;
+	top: 600px;
+}
+
+/* affichage input */
+.js-modal-wrapper input{
+	height: 36px;
+	font-size: 1em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+}
+
+
+/* affichage de la modale pour ajouter les photos */
+
+.arrow-xmark {
+	display: flex;
+	flex-direction: row;
+	gap: 597.5px;
+}
+
+.fa-arrow-left{
+	font-size: 20px;
+}
+
+
+.js-modal-wrapper-add-picture form {
+	display: flex;
+	flex-direction: column;
+	height: 600px;
+	border-radius: 3px;
+}
+
+.addpicture{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	background-color: #E8F1F6;
+	width: 420px;
+	height: 169px;
+}
+
+
+#addpicture{
+	display: none;
+}
+
+.js-modal-wrapper-add-picture form label {
+	margin: 2em 0 1em 0;
+}
+
+.js-modal-wrapper-add-picture form input, select {
+	height: 51px;
+	font-size: 1.2em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	width: 420px;
+}
+
+.js-modal-wrapper-add-picture form input[type="submit"]{
+	margin : 4em auto ;
+	margin: auto;
+}
+
+.fa-image{
+	padding-top: 10px;
+	font-size: 58px;
+	color: #b4ccd8;
+}
+
+.addpicture label{
+	display: flex;
+	flex-direction: column;
+	color:#588eab;
+	background-color: #b4ccd8;
+	width: 173px;
+	height: 36px;
+	text-align: center;
+	justify-content: center;
+	border-radius: 60px ;
+	margin-bottom: 10px;
+	margin-top: 20px;
+}
+
+.bloc-add-pictures p{
+	font-size: 10px;
+	font-family: 'Work Sans';
+	font-weight: 400;
+	color: #444444;
+}
+
+.js-modal-wrapper-add-picture hr {
+	border-top: 1px solid #B3B3B3;
+    width: 430px;
+	position: absolute;
+	top: 600px;
+}
+
+.js-modal-wrapper-add-picture input[type="submit"]{
+	margin : 60px ;
+	height: 36px;
+	font-size: 1em;
+	width: 237px;
+	background-color: #444444;
+}
+
+.addpicture img {
+	display:none;
+	max-width: 100%;
+	max-height: 169px
 }
