--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -341,6 +341,7 @@ a {
   margin-left: 56.75px;
 }
 
+/* titre mes projets */
 #portfolio h2 {
   display: flex;
   flex-direction: row;
@@ -348,18 +349,20 @@ a {
   gap: 40px;
   align-items: center;
 }
+/* div contenant modifier */
 #portfolio h2 div {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
-
+/* contenant modifier + icone */
 .modifyProject {
   display: flex;
   gap: 6px;
   font-size: 14px;
 }
 
+/* modifier */
 .modifyProject .modifyText {
   font-weight: normal;
   font-family: "Work Sans";
@@ -438,6 +441,7 @@ body .edition {
   font-size: 20px;
 }
 
+/* titres modales */
 h3 {
   font-family: "Work Sans";
   font-weight: 400;
@@ -449,6 +453,7 @@ h3 {
   margin-bottom: 20px;
 }
 
+/* supprimer la galerie */
 #deleteGalerie {
   display: flex;
   flex-direction: row;
@@ -519,7 +524,7 @@ h3 {
   border-top: 1px solid #b3b3b3;
   width: 430px;
   position: absolute;
-  top: 660px;
+  margin-top: 560px;
 }
 
 /* affichage input */
@@ -546,16 +551,20 @@ h3 {
   gap: 40px;
 }
 
+/* fermer la modale */
 .arrow-xmark {
   display: flex;
   flex-direction: row;
   gap: 597.5px;
 }
 
+
+/* retour premiere modale */
 .fa-arrow-left {
   font-size: 20px;
 }
 
+/* formulaire */
 .js-modal-wrapper-add-picture form {
   display: flex;
   flex-direction: column;
@@ -563,6 +572,7 @@ h3 {
   border-radius: 3px;
 }
 
+/* zone affichage image */
 .addpicture {
   display: flex;
   flex-direction: column;
@@ -572,6 +582,7 @@ h3 {
   height: 169px;
 }
 
+/* + ajouter photo */
 #labelAddpicture {
   display: flex;
   flex-direction: row;
@@ -579,14 +590,17 @@ h3 {
   align-items: center;
 }
 
+/* input masqué pour ajouter la photo */
 #addpicture {
   display: none;
 }
 
+/* marge label du formulaire */
 .js-modal-wrapper-add-picture form label {
   margin: 2em 0 1em 0;
 }
 
+/* css input and selection des catégories */
 .js-modal-wrapper-add-picture form input,
 select {
   height: 51px;
@@ -596,16 +610,14 @@ select {
   width: 420px;
 }
 
-.js-modal-wrapper-add-picture form input[type="submit"] {
- margin: auto;
-}
-
+/* icone image */
 .fa-image {
   padding-top: 10px;
   font-size: 58px;
   color: #b4ccd8;
 }
 
+/* bouton "+ ajouter photo" */
 .addpicture label {
   display: flex;
   flex-direction: column;
@@ -620,6 +632,7 @@ select {
   margin-top: 20px;
 }
 
+/* paragraphe  */
 .bloc-add-pictures p {
   font-size: 10px;
   font-family: "Work Sans";
@@ -627,21 +640,26 @@ select {
   color: #444444;
 }
 
+
+/* affichage de la barre de séparation */
 .js-modal-wrapper-add-picture hr {
   border-top: 1px solid #b3b3b3;
   width: 430px;
   position: absolute;
-  top: 660px;
+  margin-top: 580px;
 }
 
+/* input submit */
 .js-modal-wrapper-add-picture input[type="submit"] {
   margin: 60px;
   height: 36px;
   font-size: 1em;
   width: 237px;
   background-color: #444444;
+  margin: auto;
 }
 
+/* prévisualisation image */
 .addpicture img {
   display: none;
   max-width: 100%;
